syntax = "proto3";

package std;

option java_package="ru.shakurov.iot.grpc.proto.std";
option java_multiple_files=true;

message StdRequest {
  double number = 1;
}

message StdResponse {
  double std = 1;
}

service StdService {
  rpc calculateStd (stream StdRequest) returns (StdResponse) {}
}
